--- a/laradock/docker-compose.yml
+++ b/laradock/docker-compose.yml
@@ -207,3 +207,13 @@ services:
       networks:
         - frontend
         - backend
+
+### Selenium ###############################################
+    selenium:
+      build: ./selenium
+      ports:
+        - "${SELENIUM_PORT}:4444"
+      volumes:
+        - /dev/shm:/dev/shm
+      networks:
+        - frontend
