--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,27 @@ sudo: required
 dist: trusty
 language: php
 
+services:
+  - docker
+
 php:
   - 7.1.9
 
 addons:
-   chrome: stable
+  chrome: stable
+
+before_install:
+  - docker pull selenium/standalone-chrome
+  - docker run -d -p 4444:4444 -v /dev/shm:/dev/shm selenium/standalone-chrome
 
 install:
-   - cp .env.example .env
-   - travis_retry composer install --no-interaction --prefer-dist --no-suggest
+  - cp .env.dusk.test .env
+  - travis_retry composer install --no-interaction --prefer-dist --no-suggest
 
 before_script:
-   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
-   - php artisan serve &
+  - curl http://localhost:4444/wd/hub/status
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+  - php artisan serve &
 
 script:
-   - php artisan dusk
+  - php artisan dusk
