--- a/.env.dusk.test
+++ b/.env.dusk.test
@@ -2,12 +2,12 @@ APP_NAME=StockMS
 APP_ENV=local
 APP_KEY=base64:lTRMUh2xxeE7oJkh12hnsxYH1KnZhzdqBgzqzeoyJTU=
 APP_DEBUG=true
-APP_URL=http://165.227.110.210
+APP_URL=http://stockms.test
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=http://165.227.110.210
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=stockmsTest
 DB_USERNAME=test
