--- a/.env.dusk.test
+++ b/.env.dusk.test
@@ -1,5 +1,5 @@
 APP_NAME=StockMS
-APP_ENV=local
+APP_ENV=test
 APP_KEY=base64:lTRMUh2xxeE7oJkh12hnsxYH1KnZhzdqBgzqzeoyJTU=
 APP_DEBUG=true
 APP_URL=http://stockms.test
