--- a/.env.dusk.test
+++ b/.env.dusk.test
@@ -2,7 +2,7 @@ APP_NAME=StockMS
 APP_ENV=test
 APP_KEY=base64:lTRMUh2xxeE7oJkh12hnsxYH1KnZhzdqBgzqzeoyJTU=
 APP_DEBUG=true
-APP_URL=http://stockms.test
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
