--- a/.env.dusk.testing
+++ b/.env.dusk.testing
@@ -1,5 +1,5 @@
 APP_NAME=StockMS
-APP_ENV=test
+APP_ENV=testing
 APP_KEY=base64:lTRMUh2xxeE7oJkh12hnsxYH1KnZhzdqBgzqzeoyJTU=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -7,7 +7,7 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=165.227.110.210
 DB_PORT=3306
 DB_DATABASE=stockmsTest
 DB_USERNAME=test
