travis change mysql to travisCI

--- a/.env.dusk.travisci
+++ b/.env.dusk.travisci
@@ -1,5 +1,5 @@
 APP_NAME=StockMS
-APP_ENV=testing
+APP_ENV=travisci
 APP_KEY=base64:lTRMUh2xxeE7oJkh12hnsxYH1KnZhzdqBgzqzeoyJTU=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=165.227.110.210
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=stockmsTest
-DB_USERNAME=test
-DB_PASSWORD=test
+DB_DATABASE=stockms
+DB_USERNAME=travis
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=array
