--- a/.travis.yml
+++ b/.travis.yml
@@ -14,14 +14,13 @@ addons:
 before_install:
   - docker pull selenium/standalone-chrome
   - docker run -d -p 4444:4444 -v /dev/shm:/dev/shm selenium/standalone-chrome
+  - mysql -e 'CREATE DATABASE stockms;'
 
 install:
-  - cp .env.dusk.testing .env
+  - cp .env.dusk.travisci .env
   - travis_retry composer install --no-interaction --prefer-dist --no-suggest
 
 before_script:
-  - sudo -- sh -c -e "echo -e '165.227.110.210 mysql' >> /etc/hosts";
-  - sudo -- sh -c -e "echo -e '127.0.0.1 stockms.test' >> /etc/hosts";
   - curl http://localhost:4444/wd/hub/status
   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
   - php artisan serve &
