fix long key something

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ php:
 
 addons:
   chrome: stable
+  hosts:
+  - localhost
+  - mysql
 
 before_install:
   - docker pull selenium/standalone-chrome
