--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,10 @@ install:
   - travis_retry composer install --no-interaction --prefer-dist --no-suggest
 
 before_script:
-  - curl http://localhost:4444/wd/hub/status
+  - curl http://localhost:4444/wd/hub/status &
   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
   - php artisan serve &
+  - curl http://localhost &
 
 script:
   - php artisan key:generate
