--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ install:
 before_script:
   - curl http://localhost:4444/wd/hub/status &
   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
-  - php artisan serve &
+  - php artisan serve -q -n --host=localhost --port=80&
   - curl http://127.0.0.1 &
 
 script:
