--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.6.*",
         "laravel/passport": "^6.0",
-        "laravel/tinker": "^1.0"
+        "laravel/scout": "^5.0",
+        "laravel/tinker": "^1.0",
+        "nicolaslopezj/searchable": "1.*"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
