--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ APP_KEY=base64:lTRMUh2xxeE7oJkh12hnsxYH1KnZhzdqBgzqzeoyJTU=
 APP_DEBUG=true
 APP_URL=http://stockms.test
 
+SENTRY_LARAVEL_DSN=https://7d09ce70b0934c06963adda0f1caed6e@sentry.io/1271937
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
