--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/passport": "^6.0",
         "laravel/scout": "^5.0",
         "laravel/tinker": "^1.0",
-        "nicolaslopezj/searchable": "1.*"
+        "nicolaslopezj/searchable": "1.*",
+        "sentry/sentry-laravel": "^0.9.2"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
