--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "sentry/sentry-laravel": "^0.9.2"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.2",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "laravel/dusk": "^3.0",
