--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ addons:
 before_install:
   - docker pull selenium/standalone-chrome
   - docker run -d -p 4444:4444 -v /dev/shm:/dev/shm selenium/standalone-chrome
-  - cd laradock && docker-compose up -d nginx mysql
+  - cd laradock && cp .env.example .env && docker-compose up -d nginx mysql
   - mysql -e 'CREATE DATABASE stockms;'
 
 install:
