--- a/.travis.yml
+++ b/.travis.yml
@@ -14,16 +14,17 @@ addons:
 before_install:
   - docker pull selenium/standalone-chrome
   - docker run -d -p 4444:4444 -v /dev/shm:/dev/shm selenium/standalone-chrome
-  - cd laradock && cp .env.example .env && docker-compose up -d nginx mysql
-  - mysql -e 'CREATE DATABASE stockms;'
+  - cd laradock && cp .env.example .env && docker-compose up --build -d nginx mysql
+  - docker ps -a
+  - sleep 30  # wait for PostgreSQl and Elasticsearch to start
 
 install:
+  - mysql -e 'CREATE DATABASE stockms;'
   - cp .env.dusk.travisci .env
   - travis_retry composer install --no-interaction --prefer-dist --no-suggest
 
 before_script:
-  - curl http://localhost:4444/wd/hub/status &
-  - curl http://localhost:80/home &
+  - echo 'eiei'
 
 script:
   - php artisan key:generate
