--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,11 @@
         "barryvdh/laravel-debugbar": "^3.2",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
-        "laravel/dusk": "^3.0",
+        "laravel/dusk": "^4.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0",
+        "staudenmeir/dusk-updater": "^1.0"
     },
     "autoload": {
         "classmap": [
