--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,6 @@ addons:
   - mysql
 
 before_install:
-  - docker pull selenium/standalone-chrome
-  - docker run -d -p 4444:4444 -v /dev/shm:/dev/shm selenium/standalone-chrome
   - mysql -e 'CREATE DATABASE stockms;'
 
 install:
@@ -25,9 +23,10 @@ install:
   - travis_retry composer install --no-interaction --prefer-dist --no-suggest
 
 before_script:
-  - php artisan key:generate
-  - php artisan migrate --seed
-  - php artisan serve
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+  - php artisan key:generate &
+  - php artisan migrate --seed &
+  - php artisan serve &
 
 script:
   - php artisan dusk
