--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,6 @@ php:
 
 addons:
   chrome: stable
-  hosts:
-  - localhost
-  - mysql
 
 before_install:
   - mysql -e 'CREATE DATABASE stockms;'
@@ -23,7 +20,7 @@ install:
   - travis_retry composer install --no-interaction --prefer-dist --no-suggest
 
 before_script:
-  - google-chrome-stable --headless --disable-gpu --no-sandbox --remote-debugging-port=9515 http://localhost &
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9515 http://localhost &
   - php artisan key:generate &
   - php artisan migrate --seed &
   - php artisan serve &
