--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - travis_retry composer install --no-interaction --prefer-dist --no-suggest
 
 before_script:
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9515 http://localhost &
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://127.0.0.1 &
   - php artisan key:generate &
   - php artisan migrate --seed &
   - php artisan serve &
