--- a/.env.travisci
+++ b/.env.travisci
@@ -2,7 +2,8 @@ APP_NAME=StockMS
 APP_ENV=travisci
 APP_KEY=base64:lTRMUh2xxeE7oJkh12hnsxYH1KnZhzdqBgzqzeoyJTU=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_LOG_LEVEL=debug
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 
