--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 sudo: required
 dist: trusty
+
 language: php
 
 services:
@@ -16,14 +17,15 @@ before_install:
   - mysql -e 'CREATE DATABASE stockms;'
 
 install:
-  - cp .env.dusk.travisci .env
+  - cp .env.travisci .env
   - travis_retry composer install --no-interaction --prefer-dist --no-suggest
 
 before_script:
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://127.0.0.1 &
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
   - php artisan key:generate &
   - php artisan migrate --seed &
   - php artisan serve &
+  - sleep 5
 
 script:
   - php artisan dusk
