--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=stockms
-DB_USERNAME=stockms
-DB_PASSWORD=admin12345
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
