--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=StockMS
 APP_ENV=local
 APP_KEY=base64:lTRMUh2xxeE7oJkh12hnsxYH1KnZhzdqBgzqzeoyJTU=
 APP_DEBUG=true
-APP_URL=http://stockms.test
+APP_URL=http://stockms.com
 
 SENTRY_LARAVEL_DSN=https://7d09ce70b0934c06963adda0f1caed6e@sentry.io/1271937
 
