--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/scout": "^5.0",
         "laravel/tinker": "^1.0",
         "nicolaslopezj/searchable": "1.*",
-        "sentry/sentry-laravel": "^0.9.2"
+        "sentry/sentry-laravel": "^0.9.2",
+        "yajra/laravel-datatables-oracle": "^8.9"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
